# algolabra

./: README.md  pyproject.toml
docs/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
docs/viikkoraportit/: viikko-1.md  viikko-2.md  viikko-3.md  viikko-4.md  viikko-5.md  viikko-6.md
src/: app.py  scenario_tester.py
src/services/: a_star.py  grid_tools.py  jump_point_search.py  map_reader.py
src/templates/: index.html
src/tests/: a_star_test.py  jump_point_search_test.py  map_reader_test.py
src/tests/maps/: .map  obstacle.map  wall.map
src/utils/: grid_tools.py
